--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./main.css" />
     <title>Frontend Mentor | 3-column preview card component</title>
   </head>
-  <body class="px-6 py-[5.5rem] lg:px-0 lg:py-0">
+  <body class="px-6 py-[5.5rem] bg-primary-bgGray lg:px-0 lg:py-0">
     <!--main-->
     <main>
       <!--grid container-->
