--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <link rel="stylesheet" href="./main.css" />
     <title>Frontend Mentor | 3-column preview card component</title>
   </head>
-  <body class="px-6 py-[5.5rem] bg-primary-bgGray lg:px-0 lg:py-0">
+  <body class="px-6 py-[5.5rem] bg-primary-bgGray xl:px-0">
     <!--main-->
     <main>
       <!--grid container-->
       <div
-        class="grid grid-cols-1 rounded-md overflow-hidden lg:grid-cols-3 lg:max-w-[920px] lg:mx-auto lg:h-screen lg:items-center lg:py-0"
+        class="grid grid-cols-1 rounded-md overflow-hidden xl:grid-cols-3 xl:max-w-[920px] xl:mx-auto xl:h-screen xl:items-center xl:py-0"
       >
         <!--card one-->
         <div class="bg-primary-brightorange px-10 py-12">
@@ -38,7 +38,7 @@
             Sedans
           </h2>
           <p
-            class="text-white opacity-60 font-normal tracking-wide mb-8 lg:tracking-normal lg:pr-8 lg:mb-[90px]"
+            class="text-white opacity-60 font-normal tracking-wide mb-8 xl:tracking-normal xl:pr-8 xl:mb-[90px]"
           >
             Choose a sedan for its affordability and excellent fuel economy.
             Ideal for cruising in the city or on your next road trip.
@@ -58,7 +58,7 @@
             SUVs
           </h2>
           <p
-            class="text-white opacity-60 font-normal tracking-wide mb-8 lg:tracking-normal lg:pr-8 lg:mb-[90px]"
+            class="text-white opacity-60 font-normal tracking-wide mb-8 xl:tracking-normal xl:pr-8 xl:mb-[90px]"
           >
             Take an SUV for its spacious interior, power, and versatility.
             Perfect for your next family vacation and off-road adventures.
@@ -82,7 +82,7 @@
             Luxury
           </h2>
           <p
-            class="text-white opacity-60 font-normal tracking-wide mb-8 lg:tracking-normal lg:pr-8 lg:mb-[90px]"
+            class="text-white opacity-60 font-normal tracking-wide mb-8 xl:tracking-normal xl:pr-8 xl:mb-[90px]"
           >
             Cruise in the best car brands without the bloated prices. Enjoy the
             enhanced comfort of a luxury rental and arrive in style.
