--- a/index.html
+++ b/index.html
@@ -69,6 +69,26 @@
             >Learn More</a
           >
         </div>
+          <!--card two-->
+        <div class="bg-primary-darkcyan px-10 py-12">
+          <img class="mb-8" src="./images/icon-suvs.svg" alt="car sedab icon" />
+          <h2
+            class="font-shoulders text-[38px] font-bold text-white opacity-90 uppercase mb-5"
+          >
+            SUVs
+          </h2>
+          <p
+            class="text-white opacity-60 font-normal tracking-wide mb-8 xl:tracking-normal xl:pr-8 xl:mb-[90px]"
+          >
+            Take an SUV for its spacious interior, power, and versatility.
+            Perfect for your next family vacation and off-road adventures.
+          </p>
+          <a
+            class="inline-block px-8 py-3 bg-white opacity-90 text-primary-darkcyan rounded-full hover:bg-primary-darkcyan hover:text-white hover:outline"
+            href="#"
+            >Learn More</a
+          >
+        </div>
        
       </div>
     </main>
