--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./main.css" />
     <title>Frontend Mentor | 3-column preview card component</title>
   </head>
-  <body class="px-6 py-[5.5rem] bg-primary-bgGray xl:py-[90px] xl:px-0">
+  <body class="px-6 py-[5.5rem] bg-primary-bgGray xl:px-0">
     <!--main-->
     <main class="h-screen flex items-center justify-center">
       <!--grid container-->
