--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <link rel="stylesheet" href="./main.css" />
     <title>Frontend Mentor | 3-column preview card component</title>
   </head>
-  <body class="px-6 py-[5.5rem] bg-primary-bgGray xl:px-0">
+  <body class="px-6 py-[5.5rem] bg-primary-bgGray xl:py-[90px] xl:px-0">
     <!--main-->
-    <main class="h-screen flex items-center justify-center">
+    <main class="h-full flex items-center justify-center">
       <!--grid container-->
       <div
-        class="bg-red-300 grid grid-cols-1 rounded-md overflow-hidden max-w-2xl mx-auto xl:grid-cols-3 xl:max-w-[920px] xl:items-center xl:justify-center xl:py-0 xl:rounded-lg"
+        class="grid grid-cols-1 rounded-md overflow-hidden max-w-2xl mx-auto xl:grid-cols-3 xl:max-w-[920px] xl:items-center xl:justify-center xl:py-[80px] xl:rounded-lg"
       >
         <!--card one-->
         <div class="bg-primary-brightorange px-10 py-12">
